--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "com.android.application"
+    id "com.google.gms.google-services"
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -41,4 +42,15 @@ android {
 
 flutter {
     source = "../.."
+}
+dependencies {
+    // Firebase BoM to manage Firebase versions
+    implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
+
+    // Firebase Analytics (example)
+    implementation("com.google.firebase:firebase-analytics")
+
+    // Add other Firebase dependencies if needed (like Authentication, Firestore, etc.)
+    // For example, Firebase Auth:
+    // implementation("com.google.firebase:firebase-auth")
 }
