--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.2.2" // or your current version
+        classpath "com.google.gms:google-services:4.3.10" // Updated version
+    }
+}
+
 allprojects {
     repositories {
         google()
