--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id "com.android.application"
     id "com.google.gms.google-services"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -20,20 +19,20 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
-  defaultConfig {
-    applicationId = "com.example.fooddeliveryapp"
-    minSdk = 23  // Change this to 23
-    targetSdk = flutter.targetSdkVersion
-    versionCode = flutter.versionCode
-    versionName = flutter.versionName
-}
-
+    defaultConfig {
+        applicationId = "com.example.fooddeliveryapp"
+        minSdk = 23
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutter.versionCode
+        versionName = flutter.versionName
+    }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
 }
@@ -41,14 +40,9 @@ android {
 flutter {
     source = "../.."
 }
+
 dependencies {
-    // Firebase BoM to manage Firebase versions
-    implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
-
-    // Firebase Analytics (example)
+   implementation platform('com.stripe:stripe-android:20.10.0')  // Add this line for Stripe
     implementation("com.google.firebase:firebase-analytics")
-
-    // Add other Firebase dependencies if needed (like Authentication, Firestore, etc.)
-    // For example, Firebase Auth:
-    // implementation("com.google.firebase:firebase-auth")
+    implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
 }
