--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,15 @@
 buildscript {
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.2" // or your current version
-        classpath "com.google.gms:google-services:4.3.10" // Updated version
+        // classpath "com.android.tools.build:gradle:7.2.2" // or your current version
+        // classpath "com.google.gms:google-services:4.3.10" // Updated version
+          classpath "com.android.tools.build:gradle:8.0.2" // Latest stable version
+        // classpath "com.google.gms:google-services:4.4.0" // Latest stable version
+        classpath 'com.google.gms:google-services:4.3.15' 
     }
 }
 
@@ -13,6 +17,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
